Updates 'spo folder copy' endpoint. Closes #5330

--- a/docs/docs/cmd/spo/folder/folder-copy.mdx
+++ b/docs/docs/cmd/spo/folder/folder-copy.mdx
@@ -14,16 +14,28 @@ m365 spo folder copy [options]
 
 ```md definition-list
 `-u, --webUrl <webUrl>`
-: The URL of the site where the folder is located
+: The URL of the site where the folder is located.
 
-`-s, --sourceUrl <sourceUrl>`
-: The server- or site-relative URL of the folder to copy
+`-s, --sourceUrl [sourceUrl]`
+: The server-, site-relative or absolute decoded URL of the folder to copy. Specify either `sourceUrl` or `sourceId` but not both.
+
+`-i, --sourceId [sourceId]`
+: The UniqueId (GUID) of the folder. Specify either `sourceUrl` or `sourceId` but not both.
 
 `-t, --targetUrl <targetUrl>`
-: Server-relative URL where to copy the folder
+: Server-relative or absolute decoded URL where to copy the folder.
 
-`--allowSchemaMismatch`
-: Ignores any missing fields in the target document library and copies the folder anyway
+`--newName [newName]`
+: New name of the destination folder.
+
+`--nameConflictBehavior [nameConflictBehavior]`
+: Behavior when a file or folder with the same name is already present at the destination. Possible values: `fail`, `rename`. The default is `fail`.
+
+`--resetAuthorAndCreated`
+: Use this option to clear the author and created date. When not specified, the values from the source folder are used.
+
+`--bypassSharedLock`
+: This indicates whether a folder with a shared lock can still be moved. Use this option to copy a folder that is locked.
 ```
 
 <Global />
@@ -32,25 +44,40 @@ m365 spo folder copy [options]
 
 When you copy a folder with documents that have version history, only the latest document version is copied.
 
+When you specify a value for `nameConflictBehavior`, consider the following:
+
+- `fail` will throw an error when the destination folder already exists.
+- `rename` will add a suffix (e.g. Folder1) when the destination folder already exists.
+
 ## Examples
 
-Copies folder from a document library located in one site collection to another site collection
+Copy a folder a folder to another location using server-relative URLs
 
 ```sh
-m365 spo folder copy --webUrl https://contoso.sharepoint.com/sites/test1 --sourceUrl /Shared%20Documents/MyFolder --targetUrl /sites/test2/Shared%20Documents/
+m365 spo folder copy --webUrl https://contoso.sharepoint.com/sites/project-x --sourceUrl "/sites/project-x/Shared Documents/Reports" --targetUrl "/sites/project-y/Shared Documents/Project files"
 ```
 
-Copies folder from a document library to another site in the same site collection
+Copy a folder a folder to another location using site-relative URLs and rename it
 
 ```sh
-m365 spo folder copy --webUrl https://contoso.sharepoint.com/sites/test1 --sourceUrl /Shared%20Documents/MyFolder --targetUrl /sites/test1/HRDocuments/
+m365 spo folder copy --webUrl https://contoso.sharepoint.com/sites/project-x --sourceUrl "/Shared Documents/Reports" --targetUrl "/sites/project-y/Shared Documents" --newName "Reports January"
 ```
 
-Copies folder to a document library in another site collection. Allow for schema mismatch
+Copy a folder to another location and use new name on conflict
 
 ```sh
-m365 spo folder copy --webUrl https://contoso.sharepoint.com/sites/test1 --sourceUrl /Shared%20Documents/MyFolder --targetUrl /sites/test2/Shared%20Documents/ --allowSchemaMismatch
+m365 spo folder copy --webUrl https://contoso.sharepoint.com/sites/project-x --sourceUrl "/sites/project-x/Shared Documents/Reports" --targetUrl "/sites/project-y/Shared Documents/Project files" --nameConflictBehavior rename
 ```
+
+Copy a folder referenced by its ID to another document library and reset author and created date
+
+```sh
+m365 spo folder copy --webUrl https://contoso.sharepoint.com/sites/project-x --sourceId b8cc341b-9c11-4f2d-aa2b-0ce9c18bcba2 --targetUrl "/sites/project-x/Project files" --retainEditorAndModified
+```
+
+## Response
+
+The command won't return a response on success.
 
 ## More information
 
