--- a/docs/docs/cmd/aad/o365group/o365group-list.mdx
+++ b/docs/docs/cmd/aad/o365group/o365group-list.mdx
@@ -24,9 +24,6 @@ m365 aad o365group list [options]
 `--includeSiteUrl`
 : Set to retrieve the site URL for each group
 
-`--deleted`
-: Set to only retrieve deleted groups
-
 `--orphaned`
 : Set to only retrieve groups without owners
 ```
@@ -36,8 +33,6 @@ m365 aad o365group list [options]
 ## Remarks
 
 Using the `--includeSiteUrl` option, you can retrieve the URL of the site associated with the particular Microsoft 365 Group. If you however retrieve too many groups and will try to get their site URLs, you will most likely get an error as the command will get throttled, issuing too many requests, too frequently. If you get an error, consider narrowing down the result set using the `--displayName` and `--mailNickname` filters.
-
-Retrieving the URL of the site associated with the particular Microsoft 365 Group is not possible when retrieving deleted groups.
 
 Using the `--orphaned` option, you can retrieve Microsoft 365 Groups without owners.
 
@@ -59,18 +54,6 @@ List Microsoft 365 Groups mail nick name starting with _team_
 
 ```sh
 m365 aad o365group list --mailNickname team
-```
-
-List deleted Microsoft 365 Groups with display name starting with _Project_
-
-```sh
-m365 aad o365group list --displayName Project --deleted
-```
-
-List deleted Microsoft 365 Groups mail nick name starting with _team_
-
-```sh
-m365 aad o365group list --mailNickname team --deleted
 ```
 
 List Microsoft 365 Groups with display name starting with _Project_ including
@@ -142,9 +125,9 @@ m365 aad o365group list --orphaned
   <TabItem value="Text">
 
   ```text
-  id                                    displayName                                                   mailNickname                                          deletedDateTime
-  ------------------------------------  ------------------------------------------------------------  ----------------------------------------------------  ---------------
-  0bc3d172-dfab-463f-b79a-ed8ec5d3d455  Leadership                                                    leadership                                            null
+  id                                    displayName                                                   mailNickname                                        
+  ------------------------------------  ------------------------------------------------------------  ----------------------------------------------------
+  0bc3d172-dfab-463f-b79a-ed8ec5d3d455  Leadership                                                    leadership                                          
   ```
 
   </TabItem>
