Adds extra options to 'spo file copy' command. Closes #5340

--- a/docs/docs/cmd/spo/file/file-copy.mdx
+++ b/docs/docs/cmd/spo/file/file-copy.mdx
@@ -16,8 +16,11 @@ m365 spo file copy [options]
 `-u, --webUrl <webUrl>`
 : The URL of the site where the file is located.
 
-`-s, --sourceUrl <sourceUrl>`
-: Site-relative, server-relative or absolute URL of the file.
+`-s, --sourceUrl [sourceUrl]`
+: Site-relative, server-relative or absolute URL of the file. Specify either `sourceUrl` or `sourceId` but not both.
+
+`-i, --sourceId [sourceId]`
+: The Unique ID (GUID) of the file. Specify either `sourceUrl` or `sourceId` but not both.
 
 `-t, --targetUrl <targetUrl>`
 : Server-relative or absolute URL of the location.
@@ -28,6 +31,9 @@ m365 spo file copy [options]
 `--nameConflictBehavior [nameConflictBehavior]`
 : Behavior when a document with the same name is already present at the destination. Possible values: `fail`, `replace`, `rename`. Default is `fail`.
 
+`--resetAuthorAndCreated`
+: Use this option to clear the author and created date. When not specified, the values from the source file are used.
+
 `--bypassSharedLock`
 : This indicates whether a file with a share lock can still be copied. Use this option to copy a file that is locked.
 ```
@@ -36,7 +42,7 @@ m365 spo file copy [options]
 
 ## Remarks
 
-:::info
+:::note
 
 The required URLs `webUrl`, `sourceUrl` and `targetUrl` cannot be encoded. When you do so, you will get a `File Not Found` error.
 
@@ -50,29 +56,33 @@ When you specify a value for `nameConflictBehavior`, consider the following:
 
 ## Examples
 
-Copy a file to a document library in another site collection with server relative URLs
+Copy a file by server-relative URL to a document library in another site collection with server relative URL
 
 ```sh
 m365 spo file copy --webUrl https://contoso.sharepoint.com/sites/project --sourceUrl "/sites/project/Shared Documents/Document.pdf" --targetUrl "/sites/IT/Shared Documents"
 ```
 
-Copy a file to a document library in another site collection with absolute URLs
+Copy a file by site-relative URL to a document library in another site collection and clear the author and created date
 
 ```sh
-m365 spo file copy --webUrl https://contoso.sharepoint.com/sites/project --sourceUrl "https://contoso.sharepoint.com/sites/project/Shared Documents/Document.pdf" --targetUrl "https://contoso.sharepoint.com/sites/IT/Shared Documents"
+m365 spo file copy --webUrl https://contoso.sharepoint.com/sites/project --sourceUrl "/Shared Documents/Document.pdf" --targetUrl "/sites/IT/Shared Documents" --resetAuthorAndCreated
 ```
 
-Copy file to a document library in another site collection with a new name
+Copy file by sourceId (UniqueId) to a document library in another site collection and rename the file
 
 ```sh
-m365 spo file copy --webUrl https://contoso.sharepoint.com/sites/project --sourceUrl "/sites/project/Shared Documents/Document.pdf" --targetUrl "/sites/IT/Shared Documents" --newName "Report.pdf"
+m365 spo file copy --webUrl https://contoso.sharepoint.com/sites/project --sourceId "b2307a39-e878-458b-bc90-03bc578531d6" --targetUrl "/sites/IT/Shared Documents" --newName "Report.pdf"
 ```
 
-Copy file to a document library in another site collection with a new name, rename the file if it already exists
+Copy file by sourceId (UniqueId) to a document library in another site collection with a new name, rename the file if it already exists
 
 ```sh
-m365 spo file copy --webUrl https://contoso.sharepoint.com/sites/project --sourceUrl "/sites/project/Shared Documents/Document.pdf" --targetUrl "/sites/IT/Shared Documents" --newName "Report.pdf" --nameConflictBehavior rename
+m365 spo file copy --webUrl https://contoso.sharepoint.com/sites/project --sourceId "b2307a39-e878-458b-bc90-03bc578531d6" --targetUrl "/sites/IT/Shared Documents" --newName "Report.pdf" --nameConflictBehavior rename
 ```
+
+## Response
+
+The command won't return a response on success.
 
 ## More information
 
