--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -12,11 +12,21 @@ sidebar_position: 4
 
 - [cli config list](../cmd/cli/config/config-list.mdx) - list all self set CLI for Microsoft 365 configurations [#4797](https://github.com/pnp/cli-microsoft365/issues/4797)
 
+**Power Apps:**
+
+- [pa app permission ensure](../cmd/pa/app/app-permission-ensure.mdx) - assigns/updates permissions to a Power Apps app [#4651](https://github.com/pnp/cli-microsoft365/issues/4651)
+- [pa app permission remove](../cmd/pa/app/app-permission-remove.mdx) - removes permissions to a Power Apps app [#4655](https://github.com/pnp/cli-microsoft365/issues/4655)
+
 ### Changes
 
+- added extra options to 'spo file copy' command [#5340](https://github.com/pnp/cli-microsoft365/issues/5340)
 - fixed bug in 'spo navigation node set' to set linkless navigation nodes [#5228](https://github.com/pnp/cli-microsoft365/issues/5228)
+- fixed AsciinemaPlayer not loading in docs [#5167](https://github.com/pnp/cli-microsoft365/issues/5167)
+- fixed bug in 'spo group list' where the command had 2 outputs [#5385](https://github.com/pnp/cli-microsoft365/issues/5385)
 - enhanced docs with examples to use a custom AAD app without using environment variables [#5191](https://github.com/pnp/cli-microsoft365/issues/5191)
+- added documentation for starting contributors to docs [#2834](https://github.com/pnp/cli-microsoft365/issues/2834)
 - updated planner Roster util to return a single plan [#5335](https://github.com/pnp/cli-microsoft365/issues/5335)
+- refactored to async/await 'PnPJsRule' until 'spfx doctor' [#5152](https://github.com/pnp/cli-microsoft365/issues/5152)
 
 ## [v6.10.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.10.0)
 
