Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -27,6 +27,9 @@ sidebar_position: 4
 - added documentation for starting contributors to docs [#2834](https://github.com/pnp/cli-microsoft365/issues/2834)
 - updated planner Roster util to return a single plan [#5335](https://github.com/pnp/cli-microsoft365/issues/5335)
 - refactored to async/await 'PnPJsRule' until 'spfx doctor' [#5152](https://github.com/pnp/cli-microsoft365/issues/5152)
+- fixed use of special chars in 'spo file' commands [#4968](https://github.com/pnp/cli-microsoft365/issues/4968)
+- fixed use of special chars in 'spo folder' commands [#5328](https://github.com/pnp/cli-microsoft365/issues/5328)
+- fixed 'pa app export' [#5374](https://github.com/pnp/cli-microsoft365/issues/5374)
 
 ## [v6.10.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.10.0)
 
