Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -8,7 +8,7 @@ sidebar_position: 4
 
 ### Changes
 
-- renamed confirm to force [#4551](https://github.com/pnp/cli-microsoft365/issues/4551)
+- renamed `confirm` option to `force` [#4551](https://github.com/pnp/cli-microsoft365/issues/4551)
 - removed 'spo list label get' and 'spo list  label set' aliases [#4177](https://github.com/pnp/cli-microsoft365/issues/4177)
 - removed option 'folder' in 'spo folder list' [#4803](https://github.com/pnp/cli-microsoft365/issues/4803)
 - renamed various options [#4467](https://github.com/pnp/cli-microsoft365/issues/4467)
@@ -22,6 +22,10 @@ sidebar_position: 4
 - updated default help mode to 'options' [#5182](https://github.com/pnp/cli-microsoft365/issues/5182)
 - removed deprecated options from 'spo retentionlabel ensure' [#4207](https://github.com/pnp/cli-microsoft365/issues/4207)
 - updated 'teams meeting list' command response [#4782](https://github.com/pnp/cli-microsoft365/issues/4782)
+- updated 'spo theme list' command to always output a result  [#5231](https://github.com/pnp/cli-microsoft365/issues/5231)
+- updated 'aad o365group get' to only return M365 groups [#4217](https://github.com/pnp/cli-microsoft365/issues/4217)
+- removed 'deleted' option from 'aad o365group list' command [#5384](https://github.com/pnp/cli-microsoft365/issues/5384)
+- renamed all 'aad o365group' commands to 'aad m365group' [#5355](https://github.com/pnp/cli-microsoft365/issues/5355)
 
 ## [v6.11.0 (beta)](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
 
