Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -26,6 +26,10 @@ sidebar_position: 4
 - updated 'aad o365group get' to only return M365 groups [#4217](https://github.com/pnp/cli-microsoft365/issues/4217)
 - removed 'deleted' option from 'aad o365group list' command [#5384](https://github.com/pnp/cli-microsoft365/issues/5384)
 - renamed all 'aad o365group' commands to 'aad m365group' [#5355](https://github.com/pnp/cli-microsoft365/issues/5355)
+- updated 'spo file move' command endpoint [#5302](https://github.com/pnp/cli-microsoft365/issues/5302)
+- updated 'spo folder copy' endpoint [#5330](https://github.com/pnp/cli-microsoft365/issues/5330)
+- updated 'spo folder move' endpoint [#5331](https://github.com/pnp/cli-microsoft365/issues/5331)
+- fixed spinner when logging verbose messages [#5378](https://github.com/pnp/cli-microsoft365/issues/5378)
 
 ## [v6.11.0 (beta)](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
 
