--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -30,6 +30,13 @@ sidebar_position: 4
 - fixed use of special chars in 'spo file' commands [#4968](https://github.com/pnp/cli-microsoft365/issues/4968)
 - fixed use of special chars in 'spo folder' commands [#5328](https://github.com/pnp/cli-microsoft365/issues/5328)
 - fixed 'pa app export' [#5374](https://github.com/pnp/cli-microsoft365/issues/5374)
+- refactored to async/await spo page section get until spo propertybag remove [#5100](https://github.com/pnp/cli-microsoft365/issues/5100)
+- fixed 'm365 spo site ensure' and site-set classification and disableFlows issues [#5155](https://github.com/pnp/cli-microsoft365/issues/5155)
+- refactored to async/await spo site chrome set until spo site list [#5104](https://github.com/pnp/cli-microsoft365/issues/5104)
+- refactored to async/await spo theme remove until spo web clientsidewebpart list [#5111](https://github.com/pnp/cli-microsoft365/issues/5111)
+- refactored to async/await spo web get until spo web roleinheritance reset [#5112](https://github.com/pnp/cli-microsoft365/issues/5112)
+- refactored to async/await yammer message get until yammer report deviceusageusercounts [#5117](https://github.com/pnp/cli-microsoft365/issues/5117)
+- refactored to async/await yammer report deviceusageuserdetail until yammer search [#5118](https://github.com/pnp/cli-microsoft365/issues/5118)
 
 ## [v6.10.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.10.0)
 
