Removes pa pcf commands. Closes #5391

--- a/docs/docs/v6-upgrade-guidance.mdx
+++ b/docs/docs/v6-upgrade-guidance.mdx
@@ -271,7 +271,7 @@ Command|Old option|New option
 [outlook message move](./cmd/outlook/message/message-move.mdx)|`messageId`|`id`
 [pa connector export](./cmd/pa/connector/connector-export.mdx)|`environment`|`environmentName`
 [pa connector list](./cmd/pa/connector/connector-list.mdx)|`environment`|`environmentName`
-[pa solution reference add](./cmd/pa/solution/solution-reference-add.mdx)|`path`|`projectPath`
+pa solution reference add|`path`|`projectPath`
 [spfx package generate](./cmd/spfx/package/package-generate.mdx)|`packageName`|`name`
 [spo app add](./cmd/spo/app/app-add.mdx)|`scope`|`appCatalogScope`
 [spo app deploy](./cmd/spo/app/app-deploy.mdx)|`scope`|`appCatalogScope`
