Removes pa pcf commands. Closes #5391

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -2507,7 +2507,7 @@ sidebar_position: 4
 
 **PowerApps:**
 
-- [pa solution reference add](../cmd/pa/solution/solution-reference-add.mdx) - adds a project reference to the solution in the current directory [#954](https://github.com/pnp/cli-microsoft365/issues/954)
+- pa solution reference add - adds a project reference to the solution in the current directory [#954](https://github.com/pnp/cli-microsoft365/issues/954)
 
 **SharePoint Online:**
 
@@ -2549,8 +2549,8 @@ sidebar_position: 4
 
 **PowerApps:**
 
-- [pa pcf init](../cmd/pa/pcf/pcf-init.mdx) - Creates new PowerApps component framework project [#952](https://github.com/pnp/cli-microsoft365/issues/952)
-- [pa solution init](../cmd/pa/solution/solution-init.mdx) - initializes a directory with a new CDS solution project [#953](https://github.com/pnp/cli-microsoft365/issues/953)
+- pa pcf init - Creates new PowerApps component framework project [#952](https://github.com/pnp/cli-microsoft365/issues/952)
+- pa solution init - initializes a directory with a new CDS solution project [#953](https://github.com/pnp/cli-microsoft365/issues/953)
 
 **Global:**
 
