Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -37,6 +37,10 @@ sidebar_position: 4
 - refactored to async/await spo web get until spo web roleinheritance reset [#5112](https://github.com/pnp/cli-microsoft365/issues/5112)
 - refactored to async/await yammer message get until yammer report deviceusageusercounts [#5117](https://github.com/pnp/cli-microsoft365/issues/5117)
 - refactored to async/await yammer report deviceusageuserdetail until yammer search [#5118](https://github.com/pnp/cli-microsoft365/issues/5118)
+- enhanced the 'spo orgassetslibrary add' command [#4842](https://github.com/pnp/cli-microsoft365/issues/4842)
+- fixes new line characters issue in .eslintrc.js [#5161](https://github.com/pnp/cli-microsoft365/issues/5161)
+- added support for upgrading SPFx projects to v1.18.0-beta.5 [#5401](https://github.com/pnp/cli-microsoft365/issues/5401)
+- fixed 'getAppCatalogSiteUrl' [#5399](https://github.com/pnp/cli-microsoft365/issues/5399)
 
 ## [v6.10.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.10.0)
 
