Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -41,6 +41,7 @@ sidebar_position: 4
 - fixes new line characters issue in .eslintrc.js [#5161](https://github.com/pnp/cli-microsoft365/issues/5161)
 - added support for upgrading SPFx projects to v1.18.0-beta.5 [#5401](https://github.com/pnp/cli-microsoft365/issues/5401)
 - fixed 'getAppCatalogSiteUrl' [#5399](https://github.com/pnp/cli-microsoft365/issues/5399)
+- refactored 'spo site ensure' comand [#5305](https://github.com/pnp/cli-microsoft365/issues/5305)
 
 ## [v6.10.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.10.0)
 
