Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -30,6 +30,8 @@ sidebar_position: 4
 - updated 'spo folder copy' endpoint [#5330](https://github.com/pnp/cli-microsoft365/issues/5330)
 - updated 'spo folder move' endpoint [#5331](https://github.com/pnp/cli-microsoft365/issues/5331)
 - fixed spinner when logging verbose messages [#5378](https://github.com/pnp/cli-microsoft365/issues/5378)
+- removed pa pcf commands [#5391](https://github.com/pnp/cli-microsoft365/issues/5391)
+- removed `--deleted` option from `spo site list` [#5392](https://github.com/pnp/cli-microsoft365/issues/5392)
 
 ## [v6.11.0 (beta)](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
 
