Removes M365 group and connected site. Closes #5224

--- a/docs/docs/cmd/aad/m365group/m365group-remove.mdx
+++ b/docs/docs/cmd/aad/m365group/m365group-remove.mdx
@@ -27,7 +27,7 @@ m365 aad m365group remove [options]
 
 ## Remarks
 
-If the specified _id_ doesn't refer to an existing group, you will get a `Resource does not exist` error.
+If the specified _id_ doesn't refer to an existing group, you will get a `Resource does not exist` error. Additionally, if you do not have access to the group or the associated group-connected site, you will get an `Access denied` error.
 
 ## Examples
 
