Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -32,16 +32,18 @@ sidebar_position: 4
 - fixed 'pa app export' [#5374](https://github.com/pnp/cli-microsoft365/issues/5374)
 - refactored to async/await spo page section get until spo propertybag remove [#5100](https://github.com/pnp/cli-microsoft365/issues/5100)
 - fixed 'm365 spo site ensure' and site-set classification and disableFlows issues [#5155](https://github.com/pnp/cli-microsoft365/issues/5155)
-- refactored to async/await spo site chrome set until spo site list [#5104](https://github.com/pnp/cli-microsoft365/issues/5104)
-- refactored to async/await spo theme remove until spo web clientsidewebpart list [#5111](https://github.com/pnp/cli-microsoft365/issues/5111)
-- refactored to async/await spo web get until spo web roleinheritance reset [#5112](https://github.com/pnp/cli-microsoft365/issues/5112)
-- refactored to async/await yammer message get until yammer report deviceusageusercounts [#5117](https://github.com/pnp/cli-microsoft365/issues/5117)
-- refactored to async/await yammer report deviceusageuserdetail until yammer search [#5118](https://github.com/pnp/cli-microsoft365/issues/5118)
+- refactored to async/await 'spo site chrome set' until 'spo site list' [#5104](https://github.com/pnp/cli-microsoft365/issues/5104)
+- refactored to async/await 'spo theme remove' until 'spo web clientsidewebpart list' [#5111](https://github.com/pnp/cli-microsoft365/issues/5111)
+- refactored to async/await 'spo web get' until 'spo web roleinheritance reset' [#5112](https://github.com/pnp/cli-microsoft365/issues/5112)
+- refactored to async/await 'yammer message get' until 'yammer report deviceusageusercounts' [#5117](https://github.com/pnp/cli-microsoft365/issues/5117)
+- refactored to async/await 'yammer report deviceusageuserdetail' until 'yammer search' [#5118](https://github.com/pnp/cli-microsoft365/issues/5118)
 - enhanced the 'spo orgassetslibrary add' command [#4842](https://github.com/pnp/cli-microsoft365/issues/4842)
 - fixes new line characters issue in .eslintrc.js [#5161](https://github.com/pnp/cli-microsoft365/issues/5161)
 - added support for upgrading SPFx projects to v1.18.0-beta.5 [#5401](https://github.com/pnp/cli-microsoft365/issues/5401)
 - fixed 'getAppCatalogSiteUrl' [#5399](https://github.com/pnp/cli-microsoft365/issues/5399)
 - refactored 'spo site ensure' comand [#5305](https://github.com/pnp/cli-microsoft365/issues/5305)
+- refactored to async/await 'spo site recyclebinitem clear' until 'spo sitedesign apply' [#5105](https://github.com/pnp/cli-microsoft365/issues/5105)
+- refactored to async/await 'spo serviceprincipal set' until 'spo site apppermission set' [#5103](https://github.com/pnp/cli-microsoft365/issues/5103)
 
 ## [v6.10.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.10.0)
 
