Renames Twitter to X

--- a/docs/docs/sample-scripts/spo/change-owner-group-membership/index.mdx
+++ b/docs/docs/sample-scripts/spo/change-owner-group-membership/index.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 
 # Change group membership of all SharePoint Online sites
 
-Author: [Arjun Menon](https://twitter.com/arjunumenon), Inspired by [Patrick Lamber](https://www.nubo.eu/Change-The-Group-Memberships-Of-All-SharePoint-Online-Sites/)
+Author: [Arjun Menon](https://x.com/arjunumenon), Inspired by [Patrick Lamber](https://www.nubo.eu/Change-The-Group-Memberships-Of-All-SharePoint-Online-Sites/)
 
 
 This is a script which takes a subset or all members of the default owner group and downgrades the permission to the default member group.
