--- a/docs/docs/sample-scripts/spo/list-all-items-with-unique-permissions/index.mdx
+++ b/docs/docs/sample-scripts/spo/list-all-items-with-unique-permissions/index.mdx
@@ -9,7 +9,7 @@ import TabItem from '@theme/TabItem';
 
 # List all items with unique permissions
 
-Author: [Veronique Lengelle](https://twitter.com/veronicageek), Inspired by [Salaudeen Rajack](https://www.sharepointdiary.com/2017/03/sharepoint-online-get-all-list-items-with-unique-permissions-using-powershell.html)
+Author: [Veronique Lengelle](https://x.com/veronicageek), Inspired by [Salaudeen Rajack](https://www.sharepointdiary.com/2017/03/sharepoint-online-get-all-list-items-with-unique-permissions-using-powershell.html)
 
 ## List all items for a specific SharePoint list on a site
 
