--- a/docs/docs/sample-scripts/spo/add-multiple-folders-in-libraries-using-csv-file/index.mdx
+++ b/docs/docs/sample-scripts/spo/add-multiple-folders-in-libraries-using-csv-file/index.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 
 # Add multiple folders in libraries using a csv file
 
-Author: [Veronique Lengelle](https://twitter.com/veronicageek)
+Author: [Veronique Lengelle](https://x.com/veronicageek)
 
 ## Add multiple folders in different libraries in a specific site
 
