--- a/docs/docs/sample-scripts/spo/add-multiple-lists-in-multiple-sites/index.mdx
+++ b/docs/docs/sample-scripts/spo/add-multiple-lists-in-multiple-sites/index.mdx
@@ -9,7 +9,7 @@ import TabItem from '@theme/TabItem';
 
 # Add multiple lists in multiple sites
 
-Author: [Sudharsan Kesavanarayanan](https://twitter.com/sudharsank)
+Author: [Sudharsan Kesavanarayanan](https://x.com/sudharsank)
 
 <Tabs>
   <TabItem value="PowerShell">
