--- a/docs/docs/sample-scripts/spo/list-all-application-customizers/index.mdx
+++ b/docs/docs/sample-scripts/spo/list-all-application-customizers/index.mdx
@@ -9,7 +9,7 @@ import TabItem from '@theme/TabItem';
 
 # List all application customizers in a tenant
 
-Author: [Rabia Williams](https://twitter.com/williamsrabia)
+Author: [Rabia Williams](https://x.com/williamsrabia)
 
 List all the application customizers in a tenant. Scope is default `All`. Here we are using the [custom action list](https://pnp.github.io/cli-microsoft365/cmd/spo/customaction/customaction-list/) command to list out all the Application Customizers in all the sites in the tenant.
 
