--- a/docs/docs/sample-scripts/spo/list-attachment-names-from-spo-lists/index.mdx
+++ b/docs/docs/sample-scripts/spo/list-attachment-names-from-spo-lists/index.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 
 # List Attachment Names From SharePoint Lists For A Site
 
-Author: [Veronique Lengelle](https://twitter.com/veronicageek)
+Author: [Veronique Lengelle](https://x.com/veronicageek)
 
 <Tabs>
   <TabItem value="PowerShell">
