--- a/docs/docs/sample-scripts/teams/export-all-channels-teams/index.mdx
+++ b/docs/docs/sample-scripts/teams/export-all-channels-teams/index.mdx
@@ -9,7 +9,7 @@ import TabItem from '@theme/TabItem';
 
 # Export all channels in Microsoft Teams teams in the tenant
 
-Author: [Sudharsan Kesavanarayanan](https://twitter.com/sudharsank)
+Author: [Sudharsan Kesavanarayanan](https://x.com/sudharsank)
 
 Export all the channels from Microsoft Team in a CSV.
 
