--- a/docs/docs/sample-scripts/teams/get-all-teams-specific-user-is-part-of/index.mdx
+++ b/docs/docs/sample-scripts/teams/get-all-teams-specific-user-is-part-of/index.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 
 # Get all the Teams a specific user is part of
 
-Author: [Veronique Lengelle](https://twitter.com/veronicageek)
+Author: [Veronique Lengelle](https://x.com/veronicageek)
 
 ## Script
 
