Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -17,6 +17,10 @@ sidebar_position: 4
 - [pa app permission ensure](../cmd/pa/app/app-permission-ensure.mdx) - assigns/updates permissions to a Power Apps app [#4651](https://github.com/pnp/cli-microsoft365/issues/4651)
 - [pa app permission remove](../cmd/pa/app/app-permission-remove.mdx) - removes permissions to a Power Apps app [#4655](https://github.com/pnp/cli-microsoft365/issues/4655)
 
+**SharePoint Framework:**
+
+- [spfx project github workflow add](../cmd/spfx/project/project-github-workflow-add) - adds a GitHub workflow for a SharePoint Framework project [#5209](https://github.com/pnp/cli-microsoft365/issues/5209)
+
 ### Changes
 
 - added extra options to 'spo file copy' command [#5340](https://github.com/pnp/cli-microsoft365/issues/5340)
