Adds command `aad group recyclebinitem remove`

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -48,6 +48,8 @@ sidebar_position: 4
 - refactored 'spo site ensure' comand [#5305](https://github.com/pnp/cli-microsoft365/issues/5305)
 - refactored to async/await 'spo site recyclebinitem clear' until 'spo sitedesign apply' [#5105](https://github.com/pnp/cli-microsoft365/issues/5105)
 - refactored to async/await 'spo serviceprincipal set' until 'spo site apppermission set' [#5103](https://github.com/pnp/cli-microsoft365/issues/5103)
+- enhanced the 'planner task' commands with support for Planner Rosters [#4821](https://github.com/pnp/cli-microsoft365/issues/4821)
+- updated docs dependencies
 
 ## [v6.10.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.10.0)
 
