--- a/docs/docs/cmd/cli/config/config-list.mdx
+++ b/docs/docs/cmd/cli/config/config-list.mdx
@@ -5,7 +5,7 @@ import TabItem from '@theme/TabItem';
 
 # cli config list
 
-List all self set CLI for Microsoft 365 configurations
+List all self-set CLI for Microsoft 365 configurations
 
 ## Usage
 
