Fixes sample scripts

--- a/docs/docs/sample-scripts/spo/copy-library-folders-and-contents-to-another-library/index.mdx
+++ b/docs/docs/sample-scripts/spo/copy-library-folders-and-contents-to-another-library/index.mdx
@@ -6,11 +6,14 @@ tags:
   - migration
 ---
 
-# Copy library's folders and contents to another library
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
+# Copy library folders and contents to another library
 
 Author: [Nico De Cleyre](https://www.nicodecleyre.com)
 
-The following script shows how you can copy all library's folders and contents to another library
+The following script shows how you can copy all library folders and contents to another library.
 
 <Tabs>
   <TabItem value="PowerShell">
