--- a/docs/docs/sample-scripts/flow/cancel-all-running-flow-runs/index.mdx
+++ b/docs/docs/sample-scripts/flow/cancel-all-running-flow-runs/index.mdx
@@ -23,11 +23,11 @@ This script will cancel all running flow runs of a Power Automate flow created i
   ```powershell
   $flowEnvironment = $args[0]
   $flowGUID = $args[1]
-  $flowRuns = m365 flow run list --environmentName $flowEnvironment --flow $flowGUID --status Running --output json | ConvertFrom-Json
+  $flowRuns = m365 flow run list --environmentName $flowEnvironment --flowName $flowGUID --status Running --output json | ConvertFrom-Json
   foreach ($run in $flowRuns) {
     Write-Output "Run details: " $run
     # Cancel all the running flow runs
-    m365 flow run cancel --environmentName $flowEnvironment --flow $flowGUID --name $run.name --force
+    m365 flow run cancel --environmentName $flowEnvironment --flowName $flowGUID --name $run.name --force
     Write-Output "Run Cancelled successfully"
   }
   ```
