Align option name for `aad group get`

--- a/docs/docs/v7-upgrade-guidance.mdx
+++ b/docs/docs/v7-upgrade-guidance.mdx
@@ -399,6 +399,7 @@ We've updated the following commands and options:
 
 Command|Old option|New option
 --|--|--
+[aad group get](./cmd/aad/group/group-get.mdx)|`title`|`displayName`
 [aad user set](./cmd/aad/user/user-set.mdx)|`objectId`|`id`
 [aad user set](./cmd/aad/user/user-set.mdx)|`userPrincipalName`|`userName`
 [pa app consent set](./cmd/pa/app/app-consent-set.mdx)|`environment`|`environmentName`
