--- a/docs/docs/cmd/aad/group/group-get.mdx
+++ b/docs/docs/cmd/aad/group/group-get.mdx
@@ -16,10 +16,10 @@ m365 aad group get [options]
 
 ```md definition-list
 `-i, --id [id]`
-: The object Id of the Azure AD group. Specify either `id` or `title` but not both
+: The object Id of the Azure AD group. Specify either `id` or `displayName` but not both.
 
-`-t, --title [title]`
-: The display name of the Azure AD group. Specify either `id` or `title` but not both
+`-n, --displayName [displayName]`
+: The display name of the Azure AD group. Specify either `id` or `displayName` but not both.
 ```
 
 <Global />
@@ -32,10 +32,10 @@ Get information about an Azure AD Group by id
 m365 aad group get --id 1caf7dcd-7e83-4c3a-94f7-932a1299c844
 ```
 
-Get information about an Azure AD Group by title
+Get information about an Azure AD Group by its display name
 
 ```sh
-m365 aad group get --title "Finance"
+m365 aad group get --displayName Finance
 ```
 
 ## Response
